Update bash profile with keyboard mapping for os